--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/jobmsDB?serverTimezone=UTC
     name: jobmsDB
 
-    password: **************
+    password: Pureand@applied1
     username: postgres
 
   jpa:
@@ -21,3 +21,10 @@ spring:
     properties:
       #hibernate:
       format_sql: true
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8084/eureka
